update color and respansive

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
-    <title>Taha shoes</title>
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+    <title>SoleStyle</title>
 </head>
 
 <body>
@@ -22,7 +23,104 @@
             <button class="acsess">Wholesale</button>
             <button class="acsess">Branches</button>
         </span>
-        <input type="text" placeholder="search..">
+        <input type="text" placeholder="Can I help you?">
+    </div>
+    <div class="product-grid">
+        <div class="product-card">
+            <div class="product-image">
+                <img src="images/1.png" alt="Nike Shoe 1">
+            </div>
+            <div class="product-info">
+                <h3 class="title">Nike P-6000</h3>
+                <p class="type">Shoes</p>
+                <p class="colors">5 Colours</p>
+                <p class="price">$109.99</p>
+            </div>
+        </div>
+        <div class="product-card">
+            <div class="product-image">
+                <img src="images/2.png" alt="Nike Shoe 2">
+            </div>
+            <div class="product-info">
+                <span class="badge">Bestseller</span>
+                <h3 class="title">Nike P-6000</h3>
+                <p class="type">Older Kids Shoes</p>
+                <p class="colors">8 Colours</p>
+                <p class="price">$64.99</p>
+            </div>
+        </div>
+        <div class="product-card">
+            <div class="product-image">
+                <img src="images/3.png" alt="Nike Shoe 3">
+            </div>
+            <div class="product-info">
+                <span class="badge">Bestseller</span>
+                <h3 class="title">Nike P-6000</h3>
+                <p class="type">Men's Shoes</p>
+                <p class="colors">2 Colours</p>
+                <p class="price">$109.99</p>
+            </div>
+        </div>
+        <div class="product-card">
+            <div class="product-image">
+                <img src="images/4.png" alt="Nike Shoe 4">
+            </div>
+            <div class="product-info">
+                <span class="badge">Bestseller</span>
+                <h3 class="title">Nike P-6000</h3>
+                <p class="type">Shoes</p>
+                <p class="colors">7 Colours</p>
+                <p class="price">$99.99</p>
+            </div>
+        </div>
+        <div class="product-card">
+            <div class="product-image">
+                <img src="images/5.png" alt="Nike Shoe 4">
+            </div>
+            <div class="product-info">
+                <span class="badge">Just in</span>
+                <h3 class="title">Nike Air max 95 big bubble</h3>
+                <p class="type">men's Shoes</p>
+                <p class="colors">10 Colours</p>
+                <p class="price">$174.99</p>
+            </div>
+        </div>
+        <div class="product-card">
+            <div class="product-image">
+                <img src="images/6.png" alt="Nike Shoe 4">
+            </div>
+            <div class="product-info">
+                <span class="badge">Bestseller</span>
+                <h3 class="title">Nike Initiator</h3>
+                <p class="type">Women's Shoes</p>
+                <p class="colors">1 Colours</p>
+                <p class="price">$74.99</p>
+            </div>
+        </div>
+        <div class="product-card">
+            <div class="product-image">
+                <img src="images/7.png" alt="Nike Shoe 4">
+            </div>
+            <div class="product-info">
+                <span class="badge">Bestseller</span>
+                <h3 class="title">Nike P-6000 SE</h3>
+                <p class="type">Men's Shoes</p>
+                <p class="colors">1 Colours</p>
+                <p class="price">$109.99</p>
+            </div>
+        </div>
+        <div class="product-card">
+            <div class="product-image">
+                <img src="images/8.png" alt="Nike Shoe 4">
+            </div>
+            <div class="product-info">
+                <span class="badge">Bestseller</span>
+                <h3 class="title">Nike P-6000</h3>
+                <p class="type">Men's Shoes</p>
+                <p class="colors">1 Colours</p>
+                <p class="price">$109.99</p>
+            </div>
+        </div>
     </div>
 </body>
 
